# Bigdataanalytics

./: bigdata_lab 2.ipynb  bigdata_lab1.ipynb  pyproject.toml
.ipynb_checkpoints/: applied_analytics_lab 2-checkpoint.ipynb  big_data_lab2-checkpoint.ipynb  big_data_lab3-checkpoint.ipynb  bigdata_lab1-checkpoint.ipynb
